change picture order, fix subscribe button ios

--- a/style.scss
+++ b/style.scss
@@ -654,6 +654,12 @@ body {
         &__info {
             width: 100%;
         }
+        &__input{
+            padding-right: 10px;
+        }
+        &__button{
+            // margin-right: 10px;
+        }
     }
 
     .footer {
